<resources>
    <string name="app_name">Glow Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_login">Login</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_appointments">Appointment</string>
    <string name="menu_reward_coupons">Rewards And Coupons</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_stylists">Stylists</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_appointment_booking">Appointment booking</string>
    <string name="menu_forget_password">Forget Password</string>
    <string name="menu_user_management">User Management</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_rewards">Rewards and Coupons</string>
    <string name="menu_logout">Logout</string>
    <string name="add_service">Add Service</string>
    <string name="add_reward">Add Reward</string>
    <string name="edit_service">Edit</string>
    <string name="delete_service">Delete</string>
    <string name="edit_reward">Edit Reward</string>
    <string name="delete_reward">Delete Reward</string>
</resources>