<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.glowhub.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.glowhub.ui.services.ServicesListFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services_list" />


    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.glowhub.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
        

    <fragment
        android:id="@+id/nav_sign_up"
        android:name="com.example.glowhub.ui.sign_up.SignUpFragment"
        android:label="@string/menu_sign_up"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/nav_forget_password"
        android:name="com.example.glowhub.ui.forget_password.ForgetPasswordFragment"
        android:label="@string/menu_forget_password"
        tools:layout="@layout/fragment_forget_password" />

    <fragment
        android:id="@+id/nav_appointments"
        android:name="com.example.glowhub.ui.appointment.AppointmentFragment"
        android:label="@string/menu_appointments"
        tools:layout="@layout/fragment_appointment" />

    <fragment
        android:id="@+id/nav_rewards_and_coupon"
        android:name="com.example.glowhub.ui.gallery.GalleryFragment"
        android:label="@string/menu_sign_up"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/stylists"
        android:name="com.example.glowhub.ui.stylist_management.Stylist_Management"
        android:label="@string/menu_stylists"
        tools:layout="@layout/fragment_stylist__management" />

    <fragment
        android:id="@+id/book_appointment"
        android:name="com.example.glowhub.ui.appointment.AppointmentBooking"
        android:label="@string/menu_appointment_booking"
        tools:layout="@layout/fragment_appointment_booking" />

    <fragment
        android:id="@+id/user_management"
        android:name="com.example.glowhub.ui.user_management.UserManagementFragment"
        android:label="@string/menu_user_management"
        tools:layout="@layout/fragment_user_management" />


    <fragment
        android:id="@+id/nav_appointments"
        android:name="com.example.glowhub.ui.appointments.AppointmentsFragment"
        android:label="@string/menu_appointments"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/nav_rewards"
        android:name="com.example.glowhub.ui.rewards.RewardsListFragment"
        android:label="@string/menu_rewards"
        tools:layout="@layout/fragment_rewards" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.glowhub.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>